--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
           <img src="./assets/pics/dadi.jpeg">
           <img src="./assets/pics/sisters.jpeg">
           <img src="./assets/pics/turds.jpeg">
+          <img src="./assets/pics/ch1.jpeg">
           <img src="./assets/pics/usa1.jpeg">
           <img src="./assets/pics/usa2.jpeg">
           <img src="./assets/pics/32.jpeg">
